项目模块删除功能

--- a/src/views/main.less
+++ b/src/views/main.less
@@ -209,7 +209,7 @@
     padding: 8px;
     text-align: center;
     img{
-        height: 44px;
-        width: auto;
+        height: 65px;
+        width: 180px;
     }
 }
